Fix mobile submenu: stretch to full width (remove gray gap on right)

--- a/public/css/common.css
+++ b/public/css/common.css
@@ -556,7 +556,8 @@ select.form-control {
     height: auto;
     padding: 0;
     flex-direction: column;
-    align-items: flex-start;
+    align-items: stretch;
+    width: 100%;
   }
   .nav__link {
     display: block;
